# RAG

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/: schemas.py
app/api/routes/: documents.py  health.py  ingest.py  query.py  visualize.py
app/hallucination/: checker.py
app/ingestion/: chunker.py  pdf_extractor.py  pipeline.py
app/intent/: detector.py
app/llm/: base.py  client.py  openai_client.py
app/llm/prompts/: hyde.py  intent.py  rerank.py
app/llm/prompts/answer/: comparison.py  conversational.py  factual.py  list_format.py  table.py
app/query/: hyde.py  pipeline.py
app/retrieval/: bm25.py  cosine.py  hybrid.py  reranker.py
app/static/: index.html  logo.avif
app/store/: persistence.py  vector_store.py
app/utils/: text.py
tests/: conftest.py  test_bm25.py  test_chunker.py  test_cosine.py  test_hallucination_checker.py  test_hybrid.py  test_persistence.py
