[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Production-grade RAG pipeline with hybrid retrieval and Mistral AI"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",

    # File upload support for FastAPI
    "python-multipart>=0.0.9",

    # Async file I/O
    "aiofiles>=23.2",

    # PDF text extraction — chosen for speed and font-metadata access
    "pymupdf>=1.24",

    # Numerical computing — all vector math is done here, no vector DB
    "numpy>=1.26",

    # HTTP client for Mistral API calls
    "httpx>=0.27",

    # Settings management
    "pydantic-settings>=2.2",

    # Environment variable loading
    "python-dotenv>=1.0",

    # Hallucination detection model (vectara/hallucination_evaluation_model)
    "torch>=2.2",
    "transformers>=4.40",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # for TestClient
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
